--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,13 +1,29 @@
-.home {
+body {
     background-color: var(--lite-col);
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .row-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
 }
 
 .row {
+    margin: 10px;
+    width: 90%;
+}
+
+.row-back {
     display: flex;
     flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    width: 100%;
 }
