Styled the refreshed login system

--- a/src/styles/signPage.module.css
+++ b/src/styles/signPage.module.css
@@ -13,7 +13,12 @@
     }
 }
 
-.login {
+@keyframes font-scale {
+    from {font-size: 2vh;}
+    to {font-size: 2.2vh;}
+}
+
+.sign {
     position: fixed;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -25,7 +30,7 @@
     box-shadow: 1vh .1vh 30px var(--medi-col);
 }
 
-.login__back, .login__container {
+.sign__back, .sign__container {
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -33,14 +38,14 @@
     justify-content: space-between;
 }
 
-.login__back {
+.sign__back {
     background-color: var(--dark-col);
     color: var(--prim-col);
     border-radius: 3vh 0vh 0vh 3vh;
     cursor: pointer;
 }
 
-.login__container {
+.sign__container {
     background-color: var(--prim-col);
     color: var(--dark-col);
     border-radius: 0vh 3vh 3vh 0vh;
@@ -49,41 +54,41 @@
     align-items: center;
 }
 
-.login__logo {
+.sign__logo {
     font-size: 15vh;
     margin-top: 5vh;
 }
 
-.login__logo-title {
+.sign__logo-title {
     font-size: 6vh;
     font-weight: bold;
 }
 
-.login__credits {
-    text-transform: lowercase;
+.sign__credits {
     text-align: center;
     margin-bottom: 2vh;
 }
 
-.login-form {
+.sign-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.login__title {
+.sign__title {
     font-weight: bold;
     font-size: 8vh;
+    text-align: center;
 }
 
-.login-form__input {
+.sign-form__input {
     text-align: center;
     margin: 3vh;
     font-weight: bold;
 }
 
-.login-form__input input {
+.sign-form__input input {
     background-color: var(--lite-col);
     border: .1vh solid var(--medi-col);
     border-radius: .5vh;
@@ -94,14 +99,15 @@
     font-weight: bolder;
 }
 
-.login-form__input input:focus {
+.sign-form__input input:focus {
     outline: none;
     animation-name: hover-effect-no-scale;
     animation-duration: .5s;
     animation-fill-mode: forwards;
 }
 
-.login-form__submit input {
+.sign-form__submit button {
+    text-transform: uppercase;
     font-weight: bolder;
     padding: 1vh;
     margin-left: 1vh;
@@ -112,8 +118,25 @@
     cursor: pointer;
 }
 
-.login-form__submit input:hover {
+.sign-form__submit button:hover {
     animation-name: hover-effect;
+    animation-duration: .5s;
+    animation-fill-mode: forwards;
+}
+
+.sign__details {
+    font-size: 2vh;
+    text-align: center;
+}
+
+.sign__text {
+    text-decoration: none;
+    color: var(--dark-col);
+    font-weight: bolder;
+}
+
+.sign__text:hover {
+    animation-name: font-scale;
     animation-duration: .5s;
     animation-fill-mode: forwards;
 }
